# ffplayer_new

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFPlayer.cpp  native-lib.cpp
app/src/main/cpp/include/: FFPlayer.h  JNICallbakcHelper.h  safe_queue.h
app/src/main/java/com/example/newplayer/: FFMPEG.kt  FFPlayerKT.kt  MainActivity.kt  OnErrorListener.kt  OnPreparedListener.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
